# aganitha-backend-exercise

./: README.md  pyproject.toml  results.csv
pubmed_scraper/: __init__.py  cli.py  config.py
pubmed_scraper/core/: fetcher.py  parser.py  utils.py
tests/: conftest.py  test_cli.py  test_fetcher.py  test_parser.py  test_utils.py
