[tool.poetry]
name = "pubmed-scraper"
version = "0.1.0"
description = "CLI tool to fetch and parse PubMed data for pharmaceutical/biotech company affiliations"
authors = ["Hari Ponnusamy <hariptlinux@gmail.com>"]
packages = [{ include = "pubmed_scraper" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
requests = "^2.31.0"
pandas = "^2.2.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_scraper.cli:cli_entry_point"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"